--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 quarkus.http.port=9000
+
+quarkus.datasource.db-kind = postgresql
+quarkus.datasource.username = postgres
+quarkus.datasource.password = dbadmin!2020
+quarkus.datasource.jdbc.url = jdbc:postgresql://10.0.40.162:5432/download_ms
+quarkus.hibernate-orm.database.generation=update
