--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
       <artifactId>resteasy-jackson-provider</artifactId>
       <version>2.3.4.Final</version>
     </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt</artifactId>
+      <version>0.9.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
