--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ quarkus.http.port=9000
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = postgres
 quarkus.datasource.password = dbadmin!2020
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/download_ms
+quarkus.datasource.jdbc.url = jdbc:postgresql://172.17.0.2:5432/download_ms
 quarkus.hibernate-orm.database.generation=update
